<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_nombreCarrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_NombreCarrera" />

    <TextView
        android:id="@+id/txt_dptoCarrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Departamento" />

    <TextView
        android:id="@+id/txt_duracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Duracion" />


</LinearLayout>