<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Comentarios.Comentarios">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Facultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/unse" />

            <TextView
                android:id="@+id/tv_nombreCarreras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_Contacto"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_HazComentario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/tv_HazComentario"
                    android:textSize="30sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_CorreoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_emailComentario"
                android:inputType="textEmailAddress"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_Contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/et_Asunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Asunto"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_Mensaje"
                android:layout_width="match_parent"
                android:layout_height="286dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txt_MensajeComentario"
                android:inputType="text|textImeMultiLine"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnenviar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/txt_botonEnviarComentario"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>