<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedesSociales.RedesSociales">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Facultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/unse" />

            <TextView
                android:id="@+id/tv_nombreCarreras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_TituloRedesSociales"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lay_instagram"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="192dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        android:src="@drawable/insta" />

                    <TextView
                        android:id="@+id/txt_Instagram"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_Instagram"
                        android:textSize="36sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="103dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        android:src="@drawable/face" />

                    <TextView
                        android:id="@+id/txt_Facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_Facebook"
                        android:textSize="36sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="57dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        android:src="@drawable/twiter" />

                    <TextView
                        android:id="@+id/txt_Twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_twitter"
                        android:textSize="36sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>